RESOLVED FIXED207053
[ macOS wk2 ] inspector/page/setBootstrapScript-sub-frame.html is flaky failing
https://bugs.webkit.org/show_bug.cgi?id=207053
Summary [ macOS wk2 ] inspector/page/setBootstrapScript-sub-frame.html is flaky failing
Jacob Uphoff
Reported 2020-01-31 09:51:02 PST
inspector/page/setBootstrapScript-sub-frame.html This test has been flaky failing for all visible history on Mojave and Catalina I was able to reproduce the failure by running the test in iterations History: https://results.webkit.org/?suite=layout-tests&test=webgpu%2Fwhlsl%2Floops-continue.html Diff: --- /Volumes/Data/slave/mojave-release-tests-wk1/build/layout-test-results/inspector/page/setBootstrapScript-sub-frame-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk1/build/layout-test-results/inspector/page/setBootstrapScript-sub-frame-actual.txt @@ -5,5 +5,5 @@ -- Running test case: Page.setBootstrapScript.SubFrame Setting bootstrap script... Adding subframe... -PASS: 'valueFromBootstrapScript' should be '42'. +!! TIMEOUT: took longer than 10000ms
Attachments
Update Test Expectations (1.45 KB, patch)
2020-01-31 09:55 PST, Jacob Uphoff
no flags
Update Test Expectations (1.45 KB, patch)
2020-01-31 10:25 PST, Jacob Uphoff
no flags
Update Test Expectations (1.34 KB, patch)
2020-01-31 10:32 PST, Jacob Uphoff
no flags
Patch (3.65 KB, patch)
2020-06-05 16:14 PDT, Devin Rousso
no flags
Patch (4.49 KB, patch)
2020-06-05 18:53 PDT, Devin Rousso
no flags
Patch (4.44 KB, patch)
2020-06-06 09:33 PDT, Devin Rousso
no flags
Radar WebKit Bug Importer
Comment 1 2020-01-31 09:51:31 PST
Radar WebKit Bug Importer
Comment 2 2020-01-31 09:52:46 PST
Jacob Uphoff
Comment 3 2020-01-31 09:55:39 PST
Created attachment 389368 [details] Update Test Expectations
Jacob Uphoff
Comment 4 2020-01-31 10:25:11 PST
Created attachment 389373 [details] Update Test Expectations
Jacob Uphoff
Comment 6 2020-01-31 10:32:23 PST
Created attachment 389376 [details] Update Test Expectations
Truitt Savell
Comment 7 2020-01-31 10:35:30 PST
Comment on attachment 389376 [details] Update Test Expectations Clearing flags on attachment: 389376 Committed r255508: <https://trac.webkit.org/changeset/255508>
Alexey Proskuryakov
Comment 8 2020-01-31 21:42:36 PST
> This test has been flaky failing for all visible history on Mojave and Catalina More precisely, since it was added on 2019-10-23.
Devin Rousso
Comment 9 2020-06-05 16:14:45 PDT
Devin Rousso
Comment 10 2020-06-05 18:53:54 PDT
Created attachment 401223 [details] Patch update TestExpectations
Timothy Hatcher
Comment 11 2020-06-06 05:46:19 PDT
Comment on attachment 401223 [details] Patch Will need rebased with the agent name change.
Devin Rousso
Comment 12 2020-06-06 09:33:03 PDT
Created attachment 401262 [details] Patch rebase
EWS
Comment 13 2020-06-06 10:39:42 PDT
Committed r262688: <https://trac.webkit.org/changeset/262688> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401262 [details].
Note You need to log in before you can comment on or make changes to this bug.