[ macOS wk2 ] inspector/page/setBootstrapScript-sub-frame.html is flaky failing https://bugs.webkit.org/show_bug.cgi?id=207053 <rdar://problem/59064908>

Reviewed by Timothy Hatcher.

Source/WebCore:

Test: inspector/page/setBootstrapScript-sub-frame.html

* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::didCommitLoadImpl):
Ensure the `InspectorPageAgent` sends the new `Page.Frame` payload to the frontend before
the `PageRuntimeAgent` so that a `WI.Frame` exists before adding any `WI.ExecutionContext`.

LayoutTests:

* inspector/page/setBootstrapScript-sub-frame.html:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/225687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262688 268f45cc-cd09-0410-ab3c-d52691b4dbfc